--- a/admin/profile.html
+++ b/admin/profile.html
@@ -49,7 +49,7 @@
                     <h4>Jaka Eka</h4>
                 </div>
                 <div class="pure-u-1" style="text-align: center">
-                    <button class="pure-button" style="background: rgb(202, 60, 60);">Log out</button>
+                    <a href="login.html" class="pure-button" style="background: rgb(202, 60, 60);">Log out</a>
                 </div>
             </div>
         </div>
